# sfml-m1-mac-boilerplate

./: CMakeLists.txt  main.cpp
